--- a/ch2_nn_math/tex/explanation.tex
+++ b/ch2_nn_math/tex/explanation.tex
@@ -593,9 +593,9 @@ encapsulates the fully/densely connected layer of the MLP. I define this as
 \codeword{DenseLayer} with attributes for the input dimensions $n_x$,
 the weight matrix $W \in \mathbb{R}^{n_h \times n_x}$, and the bias
 ${b \in \mathbb{R}^{n_h}}$. The \codeword{DenseLayer} is correspondingly passed
-arguments for $n_x$, $n_h$, and an \codeword{Optional[Callable]}
+arguments for $n_x$, $n_h$, and a \codeword{Callable}
 that will be used as the vectorized activation function $\phi(\cdot)$ for a given layer.
-The \codeword{__init__} method saves the \codeword{Optional[Callable]} and passes
+The \codeword{__init__} method saves the \codeword{Callable} and passes
 the $n_x$ and $n_h$ arguments to initialize the weight matrix and bias vector.
 The \codeword{glorot_uniform} method initializes the values of the weight matrix
 using Glorot Uniform initialization \cite{Glorot2010}. The bias vector is
@@ -603,13 +603,13 @@ initialized with zeros. The activations and weighted inputs of the \codeword{Den
 are computed with the \codeword{__call__} method defined as
 
 \begin{align}
-	WeightedInputZ & = Wx^{\top} + b        \\
-	ActivationA    & = \phi(WeightedInputZ)
+	z & = Wx^{\top} + b \\
+	a & = \phi(z)
 \end{align}
 where $x$ is an argument to the \codeword{__call__} method and
 $W$, $b$, and $\phi$ are attributes of the \codeword{DenseLayer}.
 Note that $x$ can be $x \in \mathbb{R}^{n_x}$, which
-is equivalent to $X \in \mathbb{R}^{1 \times n_x}$ for the purposes of matrix
+is equivalent to ${X \in \mathbb{R}^{1 \times n_x}}$ for the purposes of matrix
 multiplication. However, the training dataset $\mathcal{D}$ is commonly
 $\mathcal{D} \in \mathbb{R}^{N \times n_x}$ where $N$ is the total number of
 training examples. Therefore, a subset $m$ of $N$ means that
@@ -619,26 +619,32 @@ Consider now the shapes of the affine transformation and the subsequent activati
 
 % Determining shape of weighted matrix
 \begin{align}
-	Z_{n_h \times m} =
-	W_{n_h \times \begingroup\color{red}n_x\endgroup} (X_{m \times \begingroup\color{red}n_x\endgroup})^{\top} + b_{n_h}
+	Z_{m \times n_h} =
+	(W_{\colorvar{blue}{n_h} \times \colorvar{red}{n_x}} (X_{\colorvar{green}{m} \times \colorvar{red}{n_x}})^{\top} + b_{\colorvar{blue}{n_h}})^{\top}
 \end{align}
 For this weighted input matrix $Z_{n_h \times m}$, you may observe a problem with how
 it is computed:
 a \textit{vector} is \textit{added} to a \textit{matrix}. This is an operation that is undefined.
 The matrix-vector addition occurs because $W_{n_h \times n_x}(X_{m \times n_x})^\top$
-returns a matrix $C_{n_h \times n_x}$ and the vector $b_{n_h}$ is then added
-to $C_{n_h \times n_x}$ such that
-$W_{n_h \times n_x}(X_{m \times n_x})^\top + b_{n_h} = C_{n_h \times n_x} + b_{n_h}$.
+returns a matrix $C_{n_h \times m}$ and the vector $b_{n_h}$ is then added
+to $C_{n_h \times m}$ such that
+$W_{n_h \times n_x}(X_{m \times n_x})^\top + b_{n_h} = C_{n_h \times m} + b_{n_h}$.
 While this operation is undefined, numerical libraries treat this as a legitimate
 operation by \textit{broadcasting} the vector $b_{n_h}$ to $B_{n_h \times m}$ \cite{Goodfellow2016,NumPyBroadcasting2021}.
-One can imagine that the column vector $b_{n_h}$ is copied and
+One can imagine that the column vector $b_{n_h}$ is copied
 into adjacent columns until there are $m$ copies of the column vector in
-what is now a $n_x \times m$ matrix $B$.
+what is now $n_h \times m$ matrix $B$.
 
-The activation matrix (i.e., activation vector for each training example) $A$
-will also be $A \in \mathbb{R}^{n_h \times m}$. Since the activations are
+The activation matrix $A$ contains the activation vector as a row
+for each training example and
+is expected to be $A \in \mathbb{R}^{m \times n_h}$. Since the activation matrix
+$A$ is
 passed onto the next layer as the new input $X$ to the \codeword{__call__} method,
-one must reshape the matrix to be the expected input.
+I make sure the matrix is the expected input shape $m \times n_x$. To do this,
+I transpose the weighted input matrix to
+${Z \in \mathbb{R}^{m \times n_h}}$ so that the activation matrix, which is just
+the result of element wise application of the activation function, matches the
+expected input for the next layer.
 
 \subsection{MLP}
 
