test output shapes and try to clarify with list iteration + numpy

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -19,29 +19,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3 4]\n",
-      "30\n",
-      "30\n"
+      "[[ 1 12 11  9]\n",
+      " [ 2 13  9  4]\n",
+      " [ 9 13 11  1]\n",
+      " [ 3  2  4 13]] (4, 4)\n",
+      "[ 0.14195316 -0.31932842  0.69153875  0.69474914 -0.72559738 -1.38336396\n",
+      " -1.5829384   0.61037938 -1.18885926 -0.50681635 -0.59631404 -0.0525673\n",
+      " -1.93627981  0.1887786   0.52389102  0.08842209] (16,)\n",
+      "(4, 4)\n",
+      "\n",
+      "[-0.31932842 -1.93627981 -0.0525673  -0.50681635]\n",
+      "[ 0.69153875  0.1887786  -0.50681635 -0.72559738]\n",
+      "[-0.50681635  0.1887786  -0.0525673  -0.31932842]\n",
+      "[ 0.69474914  0.69153875 -0.72559738  0.1887786 ]\n"
      ]
     }
    ],
    "source": [
-    "x = np.arange(1, 5)\n",
-    "print(x)\n",
-    "print(np.dot(x, x))\n",
+    "# X matrix\n",
+    "batch_size = 4\n",
+    "X = np.random.normal(size=(16, ))\n",
+    "num_samples = X.shape[0]\n",
+    "num_batches = num_samples//batch_size\n",
+    "batch_indices = np.random.choice(num_samples, size=(num_batches, batch_size))\n",
+    "print(batch_indices, batch_indices.shape)\n",
+    "print(X, X.shape)\n",
+    "print(X[batch_indices].shape)\n",
+    "print()\n",
+    "for batch in X[batch_indices]:\n",
+    "    print(batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = 1\n",
+    "batch_size = 32\n",
+    "A = np.random.normal(size=(batch_size, targets))\n",
+    "y_true = np.random.normal(size=(batch_size, targets))\n",
+    "Z = np.random.normal(size=(batch_size, targets))\n",
     "\n",
-    "lst = []\n",
-    "for ele in x:\n",
-    "    lst.append(ele * ele)\n",
+    "def compute_delta_L(a, y, z):\n",
+    "    \"\"\"\"\"\"\n",
+    "    return np.random.choice(size=(z.shape[0]))\n",
     "\n",
-    "print(sum(lst))"
+    "delta_L = np.apply_along_axis()"
    ]
   },
   {
