forward pass and debugging feature added

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,30 @@
     "from ops import ReLU, MeanSquaredError\n",
     "\n",
     "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 4)\n",
+      "(2,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.normal(size=(4,))\n",
+    "print(np.atleast_2d(x).shape)\n",
+    "\n",
+    "W = np.random.normal(size=(2, 4))\n",
+    "print(np.dot(x, np.transpose(W)).shape)\n",
+    "C = np.random.normal(size=(4, 2))\n",
+    "b = np.random.normal(size=(2, ))"
    ]
   },
   {
