MLP fully implemented and more backprop stuff

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,40 +43,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1 12 11  9]\n",
-      " [ 2 13  9  4]\n",
-      " [ 9 13 11  1]\n",
-      " [ 3  2  4 13]] (4, 4)\n",
-      "[ 0.14195316 -0.31932842  0.69153875  0.69474914 -0.72559738 -1.38336396\n",
-      " -1.5829384   0.61037938 -1.18885926 -0.50681635 -0.59631404 -0.0525673\n",
-      " -1.93627981  0.1887786   0.52389102  0.08842209] (16,)\n",
-      "(4, 4)\n",
+      "[[14  2 11  0]\n",
+      " [14  3  5 12]\n",
+      " [ 9 10  4 11]\n",
+      " [ 4  6  4 15]] (4, 4)\n",
+      "[[ 0.8644362 ]\n",
+      " [-0.74216502]\n",
+      " [ 2.26975462]\n",
+      " [-1.45436567]\n",
+      " [ 0.04575852]\n",
+      " [-0.18718385]\n",
+      " [ 1.53277921]\n",
+      " [ 1.46935877]\n",
+      " [ 0.15494743]\n",
+      " [ 0.37816252]\n",
+      " [-0.88778575]\n",
+      " [-1.98079647]\n",
+      " [-0.34791215]\n",
+      " [ 0.15634897]\n",
+      " [ 1.23029068]\n",
+      " [ 1.20237985]] (16, 1)\n",
+      "(4, 4, 1)\n",
       "\n",
-      "[-0.31932842 -1.93627981 -0.0525673  -0.50681635]\n",
-      "[ 0.69153875  0.1887786  -0.50681635 -0.72559738]\n",
-      "[-0.50681635  0.1887786  -0.0525673  -0.31932842]\n",
-      "[ 0.69474914  0.69153875 -0.72559738  0.1887786 ]\n"
+      "[[ 1.23029068]\n",
+      " [ 2.26975462]\n",
+      " [-1.98079647]\n",
+      " [ 0.8644362 ]]\n",
+      "[[ 1.23029068]\n",
+      " [-1.45436567]\n",
+      " [-0.18718385]\n",
+      " [-0.34791215]]\n",
+      "[[ 0.37816252]\n",
+      " [-0.88778575]\n",
+      " [ 0.04575852]\n",
+      " [-1.98079647]]\n",
+      "[[0.04575852]\n",
+      " [1.53277921]\n",
+      " [0.04575852]\n",
+      " [1.20237985]]\n"
      ]
     }
    ],
    "source": [
     "# X matrix\n",
     "batch_size = 4\n",
-    "X = np.random.normal(size=(16, ))\n",
+    "\n",
+    "X = np.random.normal(size=(16, 1))\n",
+    "\n",
     "num_samples = X.shape[0]\n",
     "num_batches = num_samples//batch_size\n",
     "batch_indices = np.random.choice(num_samples, size=(num_batches, batch_size))\n",
+    "\n",
     "print(batch_indices, batch_indices.shape)\n",
     "print(X, X.shape)\n",
     "print(X[batch_indices].shape)\n",
     "print()\n",
+    "\n",
     "for batch in X[batch_indices]:\n",
     "    print(batch)"
    ]
